deploy/stg/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: angryduck
  labels:
    app.kubernetes.io/env: stg
    app.kubernetes.io/name: angryduck
