deploy/stg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angryduck-webhook
  namespace: angryduck
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /webhook/preheat
spec:
  ingressClassName: ingress-nginx
  rules:
    - host: api-stg.sahand-k8s.internal-dev.example.com
      http:
        paths:
          - path: /angryduck/webhook/preheat
            pathType: Exact
            backend:
              service:
                name: angryduck-controller
                port:
                  number: 8080
